# docs/swagger.json
@@ -120,16 +120,13 @@
                 "summary": "用戶登入",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "使用者名稱",
-                        "name": "username",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "使用者密碼",
-                        "name": "password",
-                        "in": "formData"
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
                     }
                 ],
                 "responses": {
